[project]
name = "dataviz-elyes-donia"
version = "0.1.0"
description = ""
authors = [
    {name = "Elyesss",email = "elyesmaalel@gmail.com"},
     {name = "Donia", email = "doniatekaya09@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "plotly (>=5.15.0,<6.0.0)",
    "streamlit (>=1.25.0,<2.0.0)",
    "matplotlib (>=3.8.0,<4.0.0)",
    "pandas (>=2.0.0,<3.0.0)", 
    "seaborn (>=0.12.0,<0.14.0)",
    "pytest (>=7.2.0,<9.0.0)",
    "pytest-cov (>=5.0.0,<7.0.0)",
    "pytest-mock (>=3.10.0,<4.0.0)",
    "anthropic (>=0.40.0,<0.46.0)",
    "requests (>=2.31.0,<3.0.0)",
    "joblib (>=1.3.0,<2.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "scipy (>=1.15.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.5"                      # Outil de linting rapide pour vérifier la qualité du code Python
pre-commit = "^4.1.0"                # Outil pour exécuter des hooks de validation avant chaque commit (par exemple, vérifier le style du code)
sphinx = "^8.1.3"                    # Générateur de documentation à partir du code source Python
sphinx-rtd-theme = "^3.0.1"        # Thème pour la documentation générée par Sphinx (utilisé par ReadTheDocs)

